use and forward

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,10 +1,4 @@
-@mixin flexCenter($dir: row) {
-  display: flex;
-  flex-direction: $dir;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+@use "./index" as *;
 
 header {
   @include flexCenter(column);
